--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -58,6 +58,10 @@ section.controls-container
 					width control-btn-size
 					height control-btn-size
 					cursor pointer
+					transition-duration .3s
+					&:active
+						box-shadow 1px 1px 5px -3px black
+						transform translateY(5px)
 					
 				.controls-value
 					font-size 1.5rem
