--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -87,3 +87,10 @@ footer
 	bottom 10px
 	left 50%
 	transform translateX(-50%)
+	a 
+		display inline-block
+		text-decoration none
+		color #bbb
+		width 150px
+		margin-top .8rem
+		font-size .8rem
