--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -82,11 +82,8 @@ section.main
 
 // ------------- footer Styles ----------------//
 footer
+	margin-top 100px
 	text-align center
-	position fixed
-	bottom 10px
-	left 50%
-	transform translateX(-50%)
 	a 
 		display inline-block
 		text-decoration none
