--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@ body {
   margin: 0;
 }
 #wrapper {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   background: #fff;
   width: 800px;
   max-width: 90%;
@@ -65,6 +66,12 @@ section.controls-container .controls-box .controls .controls-info button:active 
       -ms-transform: translateY(5px);
           transform: translateY(5px);
 }
+@media screen and (max-width: 572px) {
+  section.controls-container .controls-box .controls .controls-info button {
+    display: block;
+    margin: 10px auto;
+  }
+}
 section.controls-container .controls-box .controls .controls-info .controls-value {
   font-size: 1.5rem;
   margin: 0 0.5rem;
@@ -86,7 +93,14 @@ section.main .timer-box button#startStop {
 }
 footer {
   margin-top: 100px;
+  margin-bottom: 50px;
   text-align: center;
+}
+@media screen and (max-width: 572px) {
+  footer {
+    margin-top: 50px;
+    margin-bottom: 25px;
+  }
 }
 footer a {
   display: inline-block;
