--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -23,7 +23,8 @@ body
 	
 
 #wrapper
-	height 100vh
+	height 100%
+	min-height 100vh
 	background #fff
 	width 800px
 	max-width 90%
@@ -63,7 +64,9 @@ section.controls-container
 					&:active
 						box-shadow 1px 1px 5px -3px black
 						transform translateY(5px)
-					
+					@media screen and (max-width: 572px)
+						display block
+						margin 10px auto		
 				.controls-value
 					font-size 1.5rem
 					margin 0 .5rem
@@ -83,11 +86,12 @@ section.main
 
 // ------------- footer Styles ----------------//
 footer
+	margin-top 100px
+	margin-bottom 50px
 	text-align center
-	position fixed
-	bottom 10px
-	left 50%
-	transform translateX(-50%)
+	@media screen and (max-width: 572px)
+		margin-top (@margin-top / 2)
+		margin-bottom (@margin-bottom / 2)
 	a 
 		display inline-block
 		text-decoration none
